[gd_scene load_steps=14 format=3 uid="uid://cy5pig3dwfe05"]

[ext_resource type="Script" uid="uid://cbmsham7t83wx" path="res://ui/select_menu.gd" id="1_lb7mt"]
[ext_resource type="Texture2D" uid="uid://dq3mh427gd6di" path="res://assets/Characters/ลุง G/portrait.png" id="2_vjxxn"]
[ext_resource type="Texture2D" uid="uid://8od4rvwi14e1" path="res://assets/GUINEA_GEARW.png" id="3_p3dqb"]
[ext_resource type="AudioStream" uid="uid://b66pwp5x3y8k3" path="res://assets/audio/43_Snake Eater.mp3" id="4_he6a1"]
[ext_resource type="AudioStream" uid="uid://baspxseribb2g" path="res://assets/audio/menuselect.wav" id="5_1q7so"]
[ext_resource type="AudioStream" uid="uid://ducy0k0rlbyqy" path="res://assets/audio/doorbuzz.wav" id="6_vjxxn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lb7mt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_lb7mt"]
Button/colors/font_focus_color = Color(1, 0.6431373, 0, 1)
Button/styles/focus = SubResource("StyleBoxFlat_lb7mt")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmr83"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_8uxxo"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 35
Button/styles/normal = SubResource("StyleBoxFlat_rmr83")

[sub_resource type="Animation" id="Animation_rmr83"]
resource_name = "MenuFade"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333333, 0.03333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Theme:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.0333333, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/newgame:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.56666666, 0.8333334, 1.0766667, 1.3433334, 1.5766667, 1.8433334, 2.0566666, 2.3, 2.5566666, 2.8233333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.7046444, 0, 0.06327853, 1), Color(1, 1, 0, 1), Color(0.7046444, 0, 0.06327853, 1), Color(1, 1, 0, 1), Color(0.7046444, 0, 0.06327853, 1), Color(1, 1, 0, 1), Color(0.7046444, 0, 0.06327853, 1), Color(1, 1, 0, 1), Color(0.7046444, 0, 0.06327853, 1), Color(1, 1, 0, 1), Color(0.7046444, 0, 0.06327853, 1), Color(1, 1, 0, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TextureRect2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.26666668),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.19076231, 0.19076234, 0.19076231, 1)]
}

[sub_resource type="Animation" id="Animation_ei257"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Theme:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/newgame:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TextureRect2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.19076231, 0.19076234, 0.19076231, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8uxxo"]
_data = {
&"MenuFade": SubResource("Animation_rmr83"),
&"RESET": SubResource("Animation_ei257")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lb7mt")
script = ExtResource("1_lb7mt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(0.19076231, 0.19076234, 0.19076231, 1)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_vjxxn")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
offset_left = 284.0
offset_right = 2204.0
offset_bottom = 1080.0
scale = Vector2(0.38, 0.38)
texture = ExtResource("3_p3dqb")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = 132.72
offset_right = 140.0
offset_bottom = 221.72058
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8uxxo")

[node name="newgame" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "NEW GAME"

[node name="continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="option" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTION"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="Theme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_he6a1")
autoplay = true
parameters/looping = true

[node name="StartSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_1q7so")

[node name="buzzSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_vjxxn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8uxxo")
}

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0)

[connection signal="pressed" from="VBoxContainer/newgame" to="." method="_on_newgame_pressed"]
[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
